--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite: ^2.2.0+3
+  url_launcher: ^6.1.6
+  image_picker: ^0.8.6
+  intl: ^0.17.0
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
